Slighty improved rating function - emphasis on slightly. Changed wage to wages in a few places
