# server/config/data-sources.js
@@ -12,5 +12,5 @@ module.exports = {
   "crimeData": require('../app/models/crime'),
   "nightlife": require('../app/models/nightlife'),
   "broadband": require('../app/models/broadband'),
-  "wage": require('../app/models/wage')
+  "wages": require('../app/models/wage')
 };
