# server/server.js
@@ -37,7 +37,7 @@ app.use('/api', require('./app/controllers/rent'));
 app.use('/api', require('./app/controllers/nightlife'));
 app.use('/api', require('./app/controllers/broadband'));
 app.use('/api', require('./app/controllers/crimes'));
-app.use('/api', require('./app/controllers/wage'));
+app.use('/api', require('./app/controllers/wages'));
 
 
 app.get('/api/status', (req, res, next) => {
